<resources>
    <string name="app_name">D&amp;DMobile</string>
    <string name="bt_next">Next</string>
    <string name="bt_back">Back</string>

    <!--Main activity-->
    <string name="title_app">D&amp;D Mobile</string>
    <string name="name_player">Usuário</string>
    <string name="password_player">Senha</string>
    <string name="bt_register">Cadastrar</string>
    <string name="bt_login">Entrar</string>

    <!--Character activity-->
    <string name="cad_character">Cadastro de Personagem</string>
    <string name="name_character">Digite o nome do personagem</string>
    <string name="description_character">Descrição do personagem</string>
    <string name="age_character">Idade do personagem</string>
    <string-array name="gender_options">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outro</item>
        <item>Prefiro não informar</item>
    </string-array>

    <!--Attribute activity-->
    <string name="points">Pontos</string>

    <string name="attribute">Atributos</string>

    <string name="attribute_0">Força</string>
    <string name="attribute_1">Destreza</string>
    <string name="attribute_2">Constituição</string>
    <string name="attribute_3">Inteligência</string>
    <string name="attribute_4">Sabedoria</string>
    <string name="attribute_5">Carisma</string>

    <string name="attribute_0_value">8</string>
    <string name="attribute_1_value">8</string>
    <string name="attribute_2_value">8</string>
    <string name="attribute_3_value">8</string>
    <string name="attribute_4_value">8</string>
    <string name="attribute_5_value">8</string>

    <string name="mod">Mod</string>

    <string name="mod_0_value">0</string>
    <string name="mod_1_value">0</string>
    <string name="mod_2_value">0</string>
    <string name="mod_3_value">0</string>
    <string name="mod_4_value">0</string>
    <string name="mod_5_value">0</string>

    <!--Choices Activity-->
    <string name="bonus">Bônus de Atributos</string>
    <string name="race">Raça:</string>
    <string name="sub_race">Sub Raça:</string>
    <string name="classe">Classe:</string>
    <string name="language">Linguagem:</string>
    <string name="live">Vida:</string>
    <string name="languages">Linguagens:</string>
    <string name="live_value">12</string>
    <string name="gen">Gênero:</string>
    <string name="bt_save">Salvar</string>

    <string name="name">Nome:</string>
    <string name="description">Descrição:</string>
    <string name="age">Idade:</string>

    <string-array name="race_options">
        <item>Anão</item>
        <item>Elfo</item>
        <item>Gnomo</item>
        <item>Halfling</item>
        <item>Humano</item>
        <item>Meio-Elvo</item>
        <item>Meio-Orc</item>
        <item>Tiefling</item>
    </string-array>

    <string-array name="sub_race_dwarfs">
        <item>Sem Sub-Raça</item>
        <item>Anão da Montanha</item>
        <item>Anão da Colina</item>
    </string-array>

    <string-array name="sub_race_elves">
        <item>Sem Sub-Raça</item>
        <item>Alto Elfo</item>
        <item>Elfo da Floresta</item>
        <item>Elfo da lua</item>
        <item>Elfo das Trevas</item>
    </string-array>

    <string-array name="sub_race_gnomes">
        <item>Sem Sub-Raça</item>
        <item>Gnomo da Floresta</item>
        <item>Gnomo da Rocha</item>
    </string-array>

    <string-array name="sub_race_halflings">
        <item>Sem Sub-Raça</item>
        <item>Halfling Pés-Leves</item>
        <item>Halfling Robusto</item>
    </string-array>


    <string-array name="classe_character_options">
        <item>Bárbaro</item>
        <item>Bardo</item>
        <item>Clérigo</item>
        <item>Druida</item>
        <item>Guerreiro</item>
        <item>Mago</item>
        <item>Monge</item>
        <item>Paladino</item>
        <item>Ladino</item>
    </string-array>

    <string-array name="language_add">
        <item>Élfico</item>
        <item>Anão</item>
        <item>Infernal</item>
        <item>Orc</item>
        <item>Gnômico</item>
        <item>Halfling</item>
    </string-array>

    <!--Activity Continue-->
    <string name="level">Level:</string>
    <string name="bt_traning">Treinar</string>
    <string name="bt_del">Excluir</string>
</resources>