<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_with_image"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="700dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        android:layout_marginBottom="100dp">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/title_app"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

    <EditText
        android:id="@+id/name_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginEnd="210dp"
        android:background="@drawable/text_input"
        android:hint="@string/name_player"
        android:inputType="text"
        android:textAlignment="center"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/password_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="210dp"
        android:background="@drawable/text_input"
        android:hint="@string/password_player"
        android:inputType="textPassword"
        android:textAlignment="center"
        tools:ignore="Autofill,TextFields,TouchTargetSizeCheck" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_background"
            android:text="@string/bt_register"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/entrar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:text="@string/bt_login"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>
