<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_with_color"
    android:gravity="start"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cad_character"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/character_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/character_01"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/text_input"
                android:hint="@string/name_character"
                android:inputType="text" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/text_input"
                android:hint="@string/description_character"
                android:inputType="text" />

            <EditText
                android:id="@+id/age_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/text_input"
                android:hint="@string/age_character"
                android:inputType="number"
                tools:ignore="Autofill" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageButton
            android:id="@+id/left"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_character"
            android:scaleType="centerCrop"
            android:src="@drawable/left"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/right"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/button_character"
            android:scaleType="centerCrop"
            android:src="@drawable/right"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/text_input" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_character"
            android:text="@string/bt_next"/>
    </LinearLayout>
</LinearLayout>